--- a/composer.json
+++ b/composer.json
@@ -33,13 +33,13 @@
 		]
 	},
 	"require": {
-		"php": ">=8.1 <=8.4"
+		"php": ">=8.1 <=8.4",
+		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"require-dev": {
         "christophwurst/nextcloud_testing": "^1.0.1",
 		"phpunit/phpunit": "^9",
-		"nextcloud/coding-standard": "^1.4",
-		"bamarni/composer-bin-plugin": "^1.8"
+		"nextcloud/coding-standard": "^1.4"
 	},
 	"extra": {
 		"bamarni-bin": {
