--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "vue-cropperjs": "^5.0.0",
     "vue-material-design-icons": "^5.3.1",
     "vue-router": "^4.5.1",
+    "vue-virtual-scroll-list": "^2.3.5",
     "vuex": "^4.1.0"
   },
   "engines": {
